FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/agf__ADM_Parent_Cloud__c.object
<CustomObject>
    <fields>
        <fullName>agf__Alternate_Roster_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate Roster Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Parent_Clouds_Alternate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Cloud_Type__c</fullName>
        <label>Cloud Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Finance_Business_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Business Partner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Parent_Clouds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Legal_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Parent_Clouds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Parent_Cloud_Type__c</fullName>
        <label>Parent Cloud Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Roster_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be set to true for assigning this Parent Cloud to Roster</description>
        <inlineHelpText>Should be set to true for assigning this Parent Cloud to Roster</inlineHelpText>
        <label>Roster Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Roster_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Roster Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Parent_Clouds_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Senior_Engineering_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is Srini&apos;s direct report that the cloud rolls up to</inlineHelpText>
        <label>Senior Engineering Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Parent_Clouds_Senior_Engineering_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Parent Cloud</label>
    <listViews>
        <fullName>agf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Parent Cloud Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parent Clouds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>